--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "svelte": "^4.0.0"
   },
   "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "^2.0.0",
+    "@sveltejs/vite-plugin-svelte": "^2.5.3,
     "typescript": "^5.0.0",
     "vite": "^5.0.0"
   }
