--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "my-svelte-app",
   "version": "0.1.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -10,8 +11,8 @@
     "svelte": "^4.0.0"
   },
   "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "^3.0.3",
-    "typescript": "^5.0.0",
-    "vite": "^5.0.0"
+    "@sveltejs/vite-plugin-svelte": "^3.2.1",
+    "vite": "^5.9.3",
+    "typescript": "^5.1.6"
   }
 }
