--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "devDependencies": {
     "vite":                     "^4.5.9",
     "@sveltejs/vite-plugin-svelte": "^2.5.3",
-    "typescript":               "^5.1.6"
+    "typescript":               "^5.1.6",
+    "@tsconfig/svelte":  "^3.0.0",
+    "svelte-preprocess":       "^5.0.0"
   }
 }
