--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 # my-svelte-app/.env
-VITE_TELEMETRY_API_URL=http://localhost:8080
+VITE_TELEMETRY_API_URL=https://telemetry.burnthe.network/api/v1/telemetry/network
 VITE_TELEMETRY_API_KEY=0
