--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,17 @@
+// dashboard/tsconfig.json
 {
-  "extends": "@tsconfig/svelte/tsconfig.json",
   "compilerOptions": {
-    "strict": true
+    "target": "ESNext",
+    "module": "ESNext",
+    "moduleResolution": "node",
+    "strict": true,
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "isolatedModules": true,
+    "jsx": "preserve",
+    "jsxImportSource": "svelte"
   },
-  "include": ["src/**/*", "src/env.d.ts"]
+  "include": ["src/**/*"]
 }
