--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
   "name": "my-svelte-app",
   "version": "0.1.0",
-  "type": "module",
   "scripts": {
-    "dev":   "vite",
-    "build": "vite build",
-    "serve": "vite preview"
+    "dev": "svelte-kit dev",
+    "build": "svelte-kit build",
+    "preview": "svelte-kit preview"
   },
   "dependencies": {
+    "@sveltejs/kit": "next",
     "svelte": "^4.2.20"
   },
   "devDependencies": {
-    "vite":                     "^4.5.9",
-    "@sveltejs/vite-plugin-svelte": "^2.5.3",
-    "typescript":               "^5.1.6",
-    "@tsconfig/svelte":  "^3.0.0",
-    "svelte-preprocess":       "^5.0.0"
+    "@sveltejs/adapter-static": "next",
+    "@tsconfig/svelte": "^3.0.0",
+    "svelte-preprocess": "^5.0.0",
+    "typescript": "^5.1.6",
+    "vite": "^4.5.9",
+    "@sveltejs/vite-plugin-svelte": "^2.5.3"
   }
 }
