--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "name": "my-svelte-app",
   "version": "0.1.0",
+  "type": "module",
   "scripts": {
     "dev": "svelte-kit dev",
     "build": "svelte-kit build",
     "preview": "svelte-kit preview"
   },
   "dependencies": {
-    "@sveltejs/kit": "next",
-    "svelte": "^4.2.20"
+    "svelte": "^4.2.20",
+    "@sveltejs/kit": "^1.0.0"
   },
   "devDependencies": {
-    "@sveltejs/adapter-static": "next",
+    "@sveltejs/adapter-static": "^1.0.0",
     "@tsconfig/svelte": "^3.0.0",
     "svelte-preprocess": "^5.0.0",
     "typescript": "^5.1.6",
