--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "svelte-preprocess": "^5.0.0",
     "typescript": "^5.1.6",
     "vite": "^4.5.9",
-    "@sveltejs/vite-plugin-svelte": "^2.5.3"
+    "@sveltejs/vite-plugin-svelte": "^2.5.3",
     "@sveltejs/kit": "^1.24.0"
   }
 }
