--- a/package.json
+++ b/package.json
@@ -3,21 +3,20 @@
   "version": "0.1.0",
   "type": "module",
   "scripts": {
-    "dev":    "svelte-kit dev",
-    "build":  "svelte-kit build",
-    "preview":"svelte-kit preview"
+    "dev":   "svelte-kit dev",
+    "build": "svelte-kit build",
+    "preview": "svelte-kit preview"
   },
   "dependencies": {
-    "svelte":             "^4.2.20",
-    "@sveltejs/kit":      "1.0.0"
+    "svelte": "^4.2.20"
   },
   "devDependencies": {
-    "@sveltejs/adapter-static":  "^2.0.0",
-    "@sveltejs/kit":             "1.0.0",
-    "@tsconfig/svelte":          "^4.0.0",
-    "svelte-preprocess":         "^5.0.0",
-    "typescript":                "^5.1.6",
-    "vite":                      "^4.5.9",
-    "@sveltejs/vite-plugin-svelte":"^2.5.3"
+    "@sveltejs/adapter-static": "^2.0.0-next.12",
+    "@sveltejs/kit": "next",
+    "@tsconfig/svelte": "^4.0.0",
+    "svelte-preprocess": "^5.0.0",
+    "typescript": "^5.1.6",
+    "vite": "^4.5.9",
+    "@sveltejs/vite-plugin-svelte": "^2.5.3"
   }
 }
