--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "type": "module",
   "scripts": {
-    "dev":   "svelte-kit dev",
-    "build": "svelte-kit build",
-    "preview": "svelte-kit preview"
+    "dev":     "vite",
+    "build":   "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
     "svelte": "^4.2.20"
