--- a/package.json
+++ b/package.json
@@ -1,22 +1,18 @@
+// package.json
 {
   "name": "my-svelte-app",
   "version": "0.1.0",
   "type": "module",
   "scripts": {
-    "dev":     "vite",
-    "build":   "vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "svelte": "^4.2.20"
+    "dev": "svelte-kit dev",
+    "build": "svelte-kit build",
+    "preview": "svelte-kit preview"
   },
   "devDependencies": {
-    "@sveltejs/adapter-static": "^2.0.0-next.12",
-    "@sveltejs/kit": "next",
-    "@tsconfig/svelte": "^4.0.0",
-    "svelte-preprocess": "^5.0.0",
+    "@sveltejs/adapter-static": "^3.0.0",
+    "@sveltejs/kit": "^1.0.0-next.589",
+    "svelte": "^4.2.20",
     "typescript": "^5.1.6",
-    "vite": "^4.5.9",
-    "@sveltejs/vite-plugin-svelte": "^2.5.3"
+    "svelte-preprocess": "^5.0.0"
   }
 }
