--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "preview": "svelte-kit preview"
   },
   "devDependencies": {
-    "@sveltejs/adapter-static": "^3.0.0",
+    "@sveltejs/adapter-static": "next",
     "@sveltejs/kit": "^1.0.0-next.589",
     "svelte": "^4.2.20",
     "typescript": "^5.1.6",
