--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
-  "name": "my-svelte-app",
+  "name": "neurodevops-dashboard",
   "version": "0.1.0",
   "type": "module",
   "scripts": {
-    "dev": "svelte-kit dev",
-    "build": "svelte-kit build",
-    "preview": "svelte-kit preview"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "svelte": "^4.2.20"
   },
   "devDependencies": {
-    "@sveltejs/adapter-static": "next",
-    "@sveltejs/kit": "^1.0.0-next.589",
-    "svelte": "^4.2.20",
+    "vite": "^4.5.14",
+    "@sveltejs/vite-plugin-svelte": "^2.5.3",
     "typescript": "^5.1.6",
+    "@tsconfig/svelte": "^3.0.0",
     "svelte-preprocess": "^5.0.0"
   }
 }
