--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-svelte-app",
   "version": "0.1.0",
-  "type": "module",
+  "private": true,
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -11,10 +11,9 @@
     "svelte": "^4.2.20"
   },
   "devDependencies": {
-    "vite": "^4.5.14",
     "@sveltejs/vite-plugin-svelte": "^2.5.3",
     "svelte-preprocess": "^5.0.0",
     "typescript": "^5.1.6",
-    "@tsconfig/svelte": "^3.0.0"
+    "vite": "^4.5.14"
   }
 }
