--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_TELEMETRY_API_URL=https://telemetry.burnthe.network/api/v1/telemetry/network
+VITE_TELEMETRY_API_URL=https://telemetry.burnthe.network
 VITE_TELEMETRY_API_KEY=0
